--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -4,3 +4,8 @@ on:
     types: [opened]
 permissions:
   pull-requests:write
+
+jobs:
+  build:
+    name: Post Welcome commit
+    runs-on: ubuntu-latest
